<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news_white_24dp"
            android:title="@string/news"/>
        <item
            android:id="@+id/nav_news_pic"
            android:icon="@drawable/ic_news_pic_white_24dp"
            android:title="@string/news_pic"/>
        <item
            android:id="@+id/nav_supply"
            android:icon="@drawable/ic_supply_white_24dp"
            android:title="@string/supply"/>
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video_white_24dp"
            android:title="@string/video"/>
    </group>

    <item android:title="@string/system">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_applications_white"
                android:title="@string/setting"/>
            <item
                android:id="@+id/nav_aboutapp"
                android:icon="@drawable/ic_aboutapp_white_24dp"
                android:title="@string/aboutapp"/>
            <item
                android:id="@+id/nav_aboutfr"
                android:icon="@drawable/ic_aboutfr_white_24dp"
                android:title="@string/aboutfr"/>
        </menu>
    </item>

</menu>
